updated README file with maven_opts setting required to be done to avoid perm gen space error